# mgo-experience

client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  main.tsx
client/src/router/: router.tsx
client/src/store/: store.ts
client/src/theme/: theme.tsx
client/src/utils/: axios.ts
docs/api/: environment-variables-development.json  mgo-experience-api.json
gpu-server/: .env.template  README.md  pyproject.toml
gpu-server/src/: app.py  main.py  server.py
gpu-server/src/controllers/: __init__.py  gpu_controller.py  hello_world_controller.py
gpu-server/src/database/: __init__.py
gpu-server/src/models/: __init__.py  setting_model.py
gpu-server/src/routes/: __init__.py  gpu_route.py  hello_world_route.py
gpu-server/src/schemas/: __init__.py  benchmark_schema.py  gpu_schema.py  json_protocol_schema.py  master_server_schema.py  setting_schema.py
gpu-server/src/services/: __init__.py  auth_service.py  gpu_benchmark_service.py  gpu_service.py  jstp_client_service.py  master_server_service.py  setting_service.py
gpu-server/src/tests/: test_jstp_client.py  test_mf_gpoeo.py  test_socket_client.py
gpu-server/src/utils/: __init__.py  human_readable_size.py  run_command_async.py
master-server/: .env.template  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
master-server/src/: app.ts  index.ts  server.ts
master-server/src/config/: index.ts
master-server/src/controllers/: authController.ts  errorController.ts  gpuController.ts  handleFactory.ts  userController.ts
master-server/src/models/: gpuModel.ts  userModel.ts
(+43 files in other folders)
