[project]
name = "mgo-experience-gpu-server"
version = "0.0.1"
description = ""
authors = [
    {name = "vonbrank", email = "vonbrank@outlook.com"},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "starlette>=0.36.3",
    "sqlalchemy>=2.0.27",
    "httpx>=0.27.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "python src/main.py"
